# cose-w

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: Constants.md  CoseAgent.md  CoseEncrypt.md  CoseHeader.md  CoseKey.md  CoseKeySet.md  CoseMAC.md  CoseMessage.md  CoseSign.md  README.md
src/: agent.rs  algs.rs  cbor.rs  common.rs  constants.rs  cose_struct.rs  enc_struct.rs  encrypt.rs  headers.rs  kdf_struct.rs  keys.rs  lib.rs  mac.rs  mac_struct.rs  message.rs  sig_struct.rs  sign.rs
test_params/: cbor.json  deterministic_sign.csv  ecdh.csv  encrypt.csv  hkdf.csv  mac.csv  priv_key_set  probabilistic_sign.csv  probabilistic_verify.csv  pub_key_set  test_vecs.csv
