[package]
name = "cose-w"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["cdylib"]
name = "cose"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]
wasm-bindgen="0.2"
ed25519-compact = "2.0.2"
p256 = {version="0.11.1", features=["ecdh"]}
hkdf = "0.12.3"
p384 = {version="0.11.2", features=["ecdh"]}
getrandom = {version="0.2.8", features=["js"]}
hmac = "0.12.1"
sha2 = "0.10.6"
chacha20poly1305 = "0.10.1"
aes-kw = {version="0.2.1", features=["alloc"]}
aes = "0.8.2"
cbc-mac = "0.1.1"
aes-gcm = "0.10.1"
ccm = "0.5.0"
