[package]
name = "cose-w"
version = "0.1.11"
authors = ["Tiago Ramires"]
license = "MIT"
description = "COSE WebAssembly"
repository = "https://github.com/tramires/cose-w"
readme = "README.md"
keywords = ["cose", "mac", "encryption", "signature", "cbor", "wasm"]
categories = ["cryptography", "encoding"]
edition = "2021"

[profile.release]
opt-level = 'z'

[lib]
crate-type=["cdylib"]
name = "cose"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
serde_json = "1.0.140"
hex = "0.4.3"
regex = "1.11.1"

[dependencies]
js-sys = "0.3.77"
wasm-bindgen="0.2"
ed25519-compact = "2.0.2"
k256 = "0.13.1"
p256 = {version="0.11.1", features=["ecdh"]}
hkdf = "0.12.3"
p384 = {version="0.11.2", features=["ecdh"]}
getrandom = {version="0.2.8", features=["js"]}
hmac = "0.12.1"
sha2 = "0.10.6"
chacha20poly1305 = "0.10.1"
aes-kw = {version="0.2.1", features=["alloc"]}
aes = "0.8.2"
cbc-mac = "0.1.1"
aes-gcm = "0.10.1"
ccm = "0.5.0"
rsa = "0.9.2"
rand = "0.8.5"
sha1 = "0.10.5"
